--- a/BaseXamarin/BaseXamarin/BaseXamarin.csproj
+++ b/BaseXamarin/BaseXamarin/BaseXamarin.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="akavache" Version="6.10.4" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.0.0" />
     <PackageReference Include="ReactiveUI.XamForms" Version="11.1.23" />
     <PackageReference Include="refit" Version="5.0.23" />
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640" />
