--- a/BaseXamarin/BaseXamarin.iOS/BaseXamarin.iOS.csproj
+++ b/BaseXamarin/BaseXamarin.iOS/BaseXamarin.iOS.csproj
@@ -61,6 +61,21 @@
     <CodesignKey>iPhone Developer</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Mock|iPhoneSimulator'">
+    <OutputPath>bin\iPhoneSimulator\Mock\</OutputPath>
+    <MtouchDebug>true</MtouchDebug>
+    <MtouchLink>None</MtouchLink>
+    <MtouchArch>x86_64</MtouchArch>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Mock|iPhone'">
+    <OutputPath>bin\iPhone\Mock\</OutputPath>
+    <MtouchDebug>true</MtouchDebug>
+    <MtouchArch>ARM64</MtouchArch>
+    <MtouchLink>SdkOnly</MtouchLink>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
+    <AppExtensionDebugBundleId />
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
