--- a/BaseXamarin/BaseXamarin.Android/BaseXamarin.Android.csproj
+++ b/BaseXamarin/BaseXamarin.Android/BaseXamarin.Android.csproj
@@ -62,6 +62,18 @@
     <PackageReference Include="Microsoft.AppCenter.Crashes">
       <Version>3.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Polly">
+      <Version>7.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading">
+      <Version>2.4.11.982</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Forms">
+      <Version>2.4.11.982</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Transformations">
+      <Version>2.4.11.982</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
