--- a/BaseXamarin/BaseXamarin/BaseXamarin.csproj
+++ b/BaseXamarin/BaseXamarin/BaseXamarin.csproj
@@ -15,8 +15,12 @@
     <PackageReference Include="akavache" Version="6.10.4" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.0.0" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.0.0" />
+    <PackageReference Include="Polly" Version="7.2.0" />
     <PackageReference Include="ReactiveUI.XamForms" Version="11.1.23" />
     <PackageReference Include="refit" Version="5.0.23" />
+    <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.11.982" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
+    <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
@@ -48,5 +52,10 @@
     <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="Resources\AppResources.Designer.cs">
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controls\" />
+    <Folder Include="Models\" />
+    <Folder Include="Styles\Fonts\" />
   </ItemGroup>
 </Project>
