Include effects folder on common and platform projects

--- a/BaseXamarin/BaseXamarin.Android/BaseXamarin.Android.csproj
+++ b/BaseXamarin/BaseXamarin.Android/BaseXamarin.Android.csproj
@@ -15,7 +15,6 @@
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
-    <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
     <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
     <AndroidUseAapt2>true</AndroidUseAapt2>
@@ -112,11 +111,12 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Effects\" />
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BaseXamarin\BaseXamarin.csproj">
-      <Project>{99C53E36-301A-45A0-ABB0-23AFECE99C9D}</Project>
+      <Project>{BF2CE118-19E7-470A-839E-7839CBCC5982}</Project>
       <Name>BaseXamarin</Name>
     </ProjectReference>
   </ItemGroup>
