--- a/BaseXamarin/BaseXamarin.iOS/BaseXamarin.iOS.csproj
+++ b/BaseXamarin/BaseXamarin.iOS/BaseXamarin.iOS.csproj
@@ -169,4 +169,7 @@
       <Name>BaseXamarin</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Effects\" />
+  </ItemGroup>
 </Project>
