--- a/BaseXamarin/BaseXamarin/BaseXamarin.csproj
+++ b/BaseXamarin/BaseXamarin/BaseXamarin.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Folder Include="Controls\" />
     <Folder Include="Models\" />
+    <Folder Include="Effects\" />
     <Folder Include="Styles\Fonts\" />
   </ItemGroup>
 </Project>
